--- a/css/style.less
+++ b/css/style.less
@@ -125,6 +125,26 @@ header {
     .logo {
 
     }
+
+    .bx-viewport {
+        left:0 !important;
+    }
+
+    .mobile-slider {
+
+        li {
+            left:0;
+        }
+
+        .bx-caption{
+            background:rgba(27,8,134,.5);
+
+            h1 {
+                margin:0;
+            }
+        }
+    }
+
     /*Adding background for the slides
     * --------------------------------------- */
     .slide{
@@ -1153,7 +1173,7 @@ article {
 
     .news {
         margin-top: 40px;
-//
+
         .news-box {
             height:100%;
             padding-bottom: 40px;
@@ -1517,7 +1537,10 @@ article {
                 background: rgba(151,41,40,.8);
             }
         }
-        #news-pager {
+
+        #bxslider-pager {
+            margin-top: 10px;
+
             img {max-width: 160px; height: auto; width: 100%;}
         }
 
